# ToDoList

./: .env.example  .gitignore  README.md  pyproject.toml
tests/: __init__.py
todolist/: __init__.py  main.py
todolist/cli/: __init__.py  menu.py
todolist/config/: __init__.py  settings.py
todolist/core/: __init__.py
todolist/core/domain/: __init__.py  project.py  status.py  task.py
todolist/core/repositories/: __init__.py  project_repository.py  task_repository.py
todolist/core/services/: __init__.py  project_service.py  task_service.py
todolist/data/: __init__.py
todolist/data/repositories/: __init__.py  in_memory_project_repository.py  in_memory_task_repository.py
